--- a/seminare/MathLearning/math-iine.tex
+++ b/seminare/MathLearning/math-iine.tex
@@ -209,7 +209,11 @@ Variational Autoencoder\cite{Kingma Welling}を理解する．
     Vis., vol.23, no.1, pp.45-78, May 1997.
 \end{thebibliography}
 
+\part{第8回-2017/4/15}
+VC dimensionなど
 
+\part{第9回-2017/4/29}
 
-
+\part{第10回-2017/6/3}
+方針及びSanovの定理.
 \end{document}
