--- a/MachineLearning/機械学習理論/理論入門/BasicMachineLearing.tex
+++ b/MachineLearning/機械学習理論/理論入門/BasicMachineLearing.tex
@@ -1,4 +1,4 @@
-%===============　、
+%===============　
 
 %一行目に必ず必要
 %文章の形式を定義
@@ -8,7 +8,7 @@
 
 
 %===============ややゆ
-%パッケージ定義、必要か不明 
+%パッケージ定義、必要か不明
 %===============分からないけど、。
 %この下4つを加えることで、mathbbが機能した
 \usepackage{amsthm}
@@ -47,6 +47,7 @@
   \item NNの基本
   \item TDE
   \item kernel法
+  \item CTC
 \end{itemize}
 入力しにくいが不可能ではない．
 
@@ -162,19 +163,52 @@ $x_i \in \mathbb{R}^n$の列$\{ x_i \}_{i= 1,\dots ,d}$に対し,
 もう少し具体的に説明しよう.
 
 
-
+頻度とベイズについて説明する。
 
 \section{t-SNE}
 \label{sec:t-SNE}
 \subsection{定義}
 \label{sub:定義}
-距離に基づく確率分布
+距離に基づく確率分布である．
 
 \subsection{実行結果}
 \label{sub:実行結果}
 
 \section{NNの基本}
 \label{sec:NNの基本}
+
+NNの基本的なアルゴリズムについて述べる.
+NNの定義をする．
+
+
+\section{CTC}
+\label{sec:CTC}
+CTC(CONNECTIONIST TEMPORAL CLASSIFICATION)について説明する.
+
+時系列のニューラルネットワーク学習に使われている．
+例えば時系列に対し，単語を出力させるアルゴリズムとして使われる.
+
+入力データを$B \in \mathbb{R}^n$とすする.出力は確率となる．
+具体的には有限集合$A$と$a \in A$に対し，$0 \le p_a \le 1$で$\sum p_a =1$となるものが出力となる関数である.
+今時刻$t$に$k$が出力された確率を$y_k^t$と表す.
+このとき時系列データ,例えば文字列$\pi="abc"$が出力される確率を
+\begin{equation*}
+ p(\pi \mid x ) = \Prod y_{\pi_t}^t
+\end{equation*}
+と計算する。
+ただ、音声の場合は文字が続いているもの、あるいは聞き間違いなどを補正するために、
+確率分布を変更する。
+例えば$abc $や$aabc$と判定された場合はすべて$abc$とみなすようにする。
+数式的に定式化しづらいが、そうした変換を仮に$F$と書き、(定義域の変更に対応できない)以下のように定義する.
+
+\begin{equation*}
+  p( \el \mid x) = \sum_{ \pi \in F^{-1}(\el)} p(\pi \mid x )
+\end{equation*}
+こちらの確率が最大となるものを求める正解として与える.
+
+逆像を具体的に計算するために、漸化式を定義して計算する.
+前の状態が前が空白か前が別の文字の場合か前も同じ文字かしかないので、そのつもりで計算すればよい.
+また、時刻とともに位置(文字数+空白部分)があるので、その文字数も含めて漸化式にする.
 
 
 
