--- a/MachineLearning/理論入門/BasicMachineLearing.tex
+++ b/MachineLearning/理論入門/BasicMachineLearing.tex
@@ -47,7 +47,6 @@
   \item NNの基本
   \item TDE
   \item kernel法
-  \item CTC
 \end{itemize}
 入力しにくいが不可能ではない．
 
@@ -57,10 +56,8 @@
 
 機械学習とは，機械をデータを用いて訓練させて，訓練以外のデータに対しても適切に応答を返す仕組み全般に対する総称である．
 昔は機械には条件を明記し，手続きを記述していた．
-そうした手続きに基づき，YesならYes,NoならNoと判断して行動していた．
-だが，データや条件は極端に増えていくものである．
-例えば，5000兆通りの条件によって動作を変えるプログラムを記述するのは
-人間には時間的に到底不可能である．つまり，全ての条件や全てのデータを入手することは現実的に不可能であるという認識が機械学習を考える背景となっている．
+だが，5000兆通りの方法を全て記述していたらいくら時間があっても足りない．
+つまり，全ての条件や全てのデータを入手することは現実的に不可能であるという認識が機械学習を考える背景となっている．
 実際に現在の機械学習では，以下のプロセスによって機械学習をするシステムを実現している．
 \begin{enumerate}
   \item 現象レベルでの問題設定
@@ -70,7 +67,7 @@
   \item 結果の検証
 \end{enumerate}
 これらを詳しく見る．
-
+　
 \paragraph{現象レベルでの問題設定}
 自然現象のレベル間で問題を設定する．
 例えば，猫か否か分類したい．適切に会話したい等．
@@ -181,37 +178,6 @@ $x_i \in \mathbb{R}^n$の列$\{ x_i \}_{i= 1,\dots ,d}$に対し,
 
 NNの基本的なアルゴリズムについて述べる.
 NNの定義をする．
-
-
-\section{CTC}
-\label{sec:CTC}
-CTC(CONNECTIONIST TEMPORAL CLASSIFICATION)について説明する.
-
-時系列のニューラルネットワーク学習に使われている．
-例えば時系列に対し，単語を出力させるアルゴリズムとして使われる.
-
-入力データを$B \in \mathbb{R}^n$とすする.出力は確率となる．
-具体的には有限集合$A$と$a \in A$に対し，$0 \le p_a \le 1$で$\sum p_a =1$となるものが出力となる関数である.
-今時刻$t$に$k$が出力された確率を$y_k^t$と表す.
-このとき時系列データ,例えば文字列$\pi="abc"$が出力される確率を
-\begin{equation*}
- p(\pi \mid x ) = \Prod y_{\pi_t}^t
-\end{equation*}
-と計算する。
-ただ、音声の場合は文字が続いているもの、あるいは聞き間違いなどを補正するために、
-確率分布を変更する。
-例えば$abc $や$aabc$と判定された場合はすべて$abc$とみなすようにする。
-数式的に定式化しづらいが、そうした変換を仮に$F$と書き、(定義域の変更に対応できない)以下のように定義する.
-
-\begin{equation*}
-  p( \el \mid x) = \sum_{ \pi \in F^{-1}(\el)} p(\pi \mid x )
-\end{equation*}
-こちらの確率が最大となるものを求める正解として与える.
-
-逆像を具体的に計算するために、漸化式を定義して計算する.
-前の状態が前が空白か前が別の文字の場合か前も同じ文字かしかないので、そのつもりで計算すればよい.
-また、時刻とともに位置(文字数+空白部分)があるので、その文字数も含めて漸化式にする.
-
 
 
 \end{document}
